# docki

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix
.github/workflows/: docker.yml  docker_deploy.yml  rust.yml  rust_deploy.yml  rust_test.yml
docs/core/: functions.html
res/test/: docki.config.toml
res/test/asciidocs/core/: functions.html
res/test/asciidocs/slides/: index.adoc
sh/: asciidoctor-revealjs-sh
src/: main.rs  util.rs
src/app/: mod.rs
src/app/args/: mod.rs  structure.rs
src/app/builder/: asciidoctor.rs  mod.rs
src/app/commands/: build.rs  completions.rs  health.rs  install_reveal.rs  mod.rs  reveal.rs  serve.rs  setup.rs  traits.rs
src/app/commands/executions/: build_execution.rs  mod.rs
src/app/config/: arguments.rs  config.rs  mod.rs
src/app/fs_util/: mod.rs
src/app/log/: mod.rs
src/app/rx/: mod.rs
src/app/watcher/: mod.rs
src/test/: fs_util.rs  mod.rs  rx.rs
src/test/builder/: asciidoctor.rs  mod.rs
