[package]
name = "docki"
version = "0.3.0"
edition = "2021"
description = "cli for building and publishing documentation using asciidoctor"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
home = "0.5.4"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
text_io = "0.1.12"
zip-extract = "0.1.1"
