[package]
name = "docki"
version = "1.2.0"
edition = "2021"
description = "cli for building and publishing documentation using asciidoctor"
license-file = "LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
futures = "0.3.26"
home = "0.5.4"
live-server = "0.6.0"
notify = { version = "5.1.0", features = ["serde"] }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking"] }
text_io = "0.1.12"
tokio = { version = "1.26.0", features = ["full"] }
zip-extract = "0.1.1"
